test/semantic/good/jeffrey-test-stuart.mC
void print (char buffer [])
{
}


int main ()
{
 char buf[10];
  buf[0] = '1';
   buf[1] = 't';
   
    print (buf);
    }
