test/semantic/bad/jeffrey-test-weird5.mC
int bar(char a)
{
	int b;
	int d[10];
	t[2*1] = 4*8;
	c = 5;
	c = c+5*2; //20
	c[2+2] = c;
	return c; 
}

int c;
int t[5*2]; //not sure if allowed in are grammer. 

